Fix whitespace on your games list

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -109,3 +109,7 @@ a {
 .right {
     float: right;
 }
+
+pre {
+    font: inherit;
+}
